--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
+
+# Добавление библиотеки для работы с SQL
+find_package(Qt6 REQUIRED COMPONENTS Sql)
+
+# Убедитесь, что нужные файлы найдены и подключены
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
 set(PROJECT_SOURCES
@@ -19,22 +24,30 @@ set(PROJECT_SOURCES
         mainwindow.ui
 )
 
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/icons DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(Harmoniq
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        user.h
+        user.cpp
+        sign_in.cpp
+        sign_in.h
+        sign_in.ui
+        sign_up.h
+        sign_up.cpp
+        sign_up.ui
+        sql.h
+        sql.cpp
+        clickablewidget.h clickablewidget.cpp
+
     )
-# Define target properties for Android with Qt 6 as:
-#    set_property(TARGET Harmoniq APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
-#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
-# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
         add_library(Harmoniq SHARED
             ${PROJECT_SOURCES}
         )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
         add_executable(Harmoniq
             ${PROJECT_SOURCES}
@@ -42,11 +55,9 @@ else()
     endif()
 endif()
 
-target_link_libraries(Harmoniq PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+# Добавление библиотеки Qt Sql для работы с базой данных
+target_link_libraries(Harmoniq PRIVATE Qt6::Sql Qt${QT_VERSION_MAJOR}::Widgets)
 
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
   set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.Harmoniq)
 endif()
